Changed the Tab Names and added the Friends and inbox tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="login_error_message">Please make sure you enter a username and password</string>
     <string name="login_error_Title">Oops!!</string>
     <string name="menu_logout_label">Logout</string>
+    <string name="empty_inbox_label">No New messages!</string>
+    <string name="empty_friends_label">Add friends to begin!</string>
+
 </resources>
