--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,9 @@
     <string name="general_error">"Sorry, There was an error!"</string>
     <string name="video_file_size_warning">"Your video must be less then 10Mb"</string>
     <string name="error_opening_file">"There was a problem with the selected file."</string>
-    <string name="error_file_size_to_large">""The Selected field is to large. Please select a new file.""</string>
-
+    <string name="error_file_size_to_large">"The Selected field is to large. Please select a new file."</string>
+    <string name="empty_recipients_list_message">"Choose some friends first"</string>
+    <string name="menu_send_label">"Send"</string>
 
     <string-array name = "camera_choices">
         <item>Take Picture</item>
